fix swagger wip
